Complete Product CRUD (service + repository, validation & transactions)

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,9 +1,3 @@
 spring.application.name=product-service
-server:
-port:8081
-spring:
-config:
-import:optional:classpath:application-dev.properties
-jpa:
-hibernate:
-ddl-auto:update
+spring.profiles.active=local
+spring.jpa.open-in-view=false
