--- a/product-service/.gitignore
+++ b/product-service/.gitignore
@@ -32,3 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 product-service/src/main/resources/application-local.properties
+product-service/src/main/resources/application-local.properties
+src/main/resources/application-local.properties
