--- a/order-service/src/main/resources/application-local.properties
+++ b/order-service/src/main/resources/application-local.properties
@@ -1,6 +1,9 @@
 spring.application.name=order-service
 
+# HTTP port
+server.port=8082
 
+# ---- DB (PostgreSQL) ----
 spring.datasource.url=jdbc:postgresql://localhost:5436/order_db
 spring.datasource.username=ekaya
 spring.datasource.password=2070Badem
@@ -10,7 +13,12 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
+# ---- RabbitMQ ----
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# ---- WebClient base URLs (EN ÖNEML? KISIM) ----
+customer.service.base-url=http://localhost:8080
+product.service.base-url=http://localhost:8081
